2016-08-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/xfer-dest-holding.c (finish_chunk): Return a char *
	* server-src/xfer-server.h (finish_chunk): modify declaration
	* perl/Amanda/XferServer.swg (finish_chunk): modify declaration
	* perl/Amanda/Xfer.pod: Update documentation

2016-08-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Correctly compute the signature for AWS4 if
	  S3_SUBDOMAIN is set to OFF

2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/ambackup.pl: Wait for 'MESG END'

2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/ambackupd.pl: Fix string comparaison

2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amandad-src/amandad.c: Wait for the child process to terminate

2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Scribe.pm: fix bad variable name

2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Curinfo/Info.pm: Fix perl warning

2016-08-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: Enable XFER_MECH_WRITEFD, XFER_MECH_MEM_RING
	  and XFER_MECH_WRITEFD, XFER_MECH_SHM_RING

2016-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Fix perl warning

2016-08-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c: typo

2016-07-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: (childstr): check dumppid at last
	* client-src/sendbackup.c: (check_result):Increase the timeout to 600
	  seconds

2016-07-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Amdump.pm: Use POSIX::close
	* perl/Amanda/Chunker/Controller.pm, perl/Amanda/Chunker/Scribe.pm:
	  Improve error message
	* perl/Amanda/Config.swg: Add Message for code 1560000
	* perl/Amanda/Report.pm: Fix parsing of pid and fork L_INFO lines
	* perl/Amanda/Report/human.pm: Improve error message