@@ -62,6 +62,7 @@ AMANDA_WITH_ASSERTIONS
 AMANDA_WITH_DEBUGGING
 AMANDA_WITH_DEBUG_DAYS
 AMANDA_WITH_SINGLE_USERID
+AMANDA_WITH_FAILURE_CODE
 AMANDA_DISABLE_INSTALLPERMS
 AMANDA_DISABLE_SYNTAX_CHECKS
 
