@@ -74,6 +74,7 @@ $DEFAULT_TAPE_DEVICE = "@DEFAULT_TAPE_DEVICE@";
 $DEFAULT_TAPE_SERVER = "@DEFAULT_TAPE_SERVER@";
 $DUMP = "@DUMP@";
 $DUMP_RETURNS_1 = "@DUMP_RETURNS_1@";
+$FAILURE_CODE = "@FAILURE_CODE@";
 $GNUTAR = "@GNUTAR@";
 $HAVE_GZIP = "@HAVE_GZIP@";
 $KRB5_SECURITY = "@KRB5_SECURITY@";
